<resources>
    <string name="app_name">StudentSuite</string>
    <string name="app_name_spaced">Student Suite</string>

    <string name="alarm">Alarm</string>
    <string name="timer">Timer</string>
    <string name="calendar">Calendar</string>
    <string name="task">To-Do List</string>
    <string name="note">Notes</string>
    <string name="monthly_view">Monthly View</string>
    <string name="list_view">List View</string>

    <!-- Home Screen values -->
    <string name="setAlarm">Set an Alarm</string>
    <string name="viewCalendar">View Calendar</string>
    <string name="checkTask">Check To-Do list</string>
    <string name="addNote">Add notes</string>
  
    <!-- Alarm Screen values -->
    <string name="addAlarm">Add Alarm</string>
    <string name="am">AM</string>
    <string name="pm">PM</string>
    <string name="alarmSun">Sun</string>
    <string name="alarmMon">Mon</string>
    <string name="alarmTue">Tue</string>
    <string name="alarmWed">Wed</string>
    <string name="alarmThur">Thu</string>
    <string name="alarmFri">Fri</string>
    <string name="alarmSat">Sat</string>

    <!-- Calendar Screen values -->
    <string name="addEvent">Add Event</string>
    <string name="addEventHere">Add Event Here</string>
    <string name="saveEvent">Save Event</string>

    <!-- Note Screen values -->
    <string name="addNewNote">Add new note</string>
    <string name="typeNote">Type your notes here</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>