<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/menuAlarm"
        android:title="@string/alarm"
        android:icon="@drawable/ic_alarm" />

    <item
        android:id="@+id/menuCalendar"
        android:title="@string/calendar"
        android:icon="@drawable/ic_calendar" />

    <!--
    <item
        android:id="@+id/menuTask"
        android:title="@string/task"
        android:icon="@drawable/ic_task" /> -->

    <item
        android:id="@+id/menuNote"
        android:title="@string/note"
        android:icon="@drawable/ic_note" />

    <!-- Invisible MenuItem for Home Screen -->
    <item
        android:id="@+id/menuInvisible"
        android:visible="false"
        android:icon="@drawable/ic_test" />
</menu>