<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/mainBackground" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_centerInParent="true"
        android:gravity="center_horizontal" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="45dp"
            android:text="@string/app_name_spaced"
            android:textSize="45sp"
            android:textStyle="bold"
            android:textColor="@color/txtColorOut" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginHorizontal="80dp">

            <Button
                android:id="@+id/homeAlarmBtn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20dp"
                android:paddingVertical="10dp"
                android:text="@string/setAlarm"
                android:textSize="20sp"
                android:textColor="@color/txtColorIn"
                android:backgroundTint="@color/btnColor" />

            <Button
                android:id="@+id/homeCalendarBtn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginVertical="20dp"
                android:paddingVertical="10dp"
                android:text="@string/viewCalendar"
                android:textSize="20sp"
                android:textColor="@color/txtColorIn"
                android:backgroundTint="@color/btnColor" />

            <!--
            <Button
                android:id="@+id/homeTaskBtn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginVertical="20dp"
                android:paddingVertical="10dp"
                android:text="@string/checkTask"
                android:textSize="18sp"
                android:textColor="@color/txtColorIn"
                android:backgroundTint="@color/btnColor" /> -->

            <Button
                android:id="@+id/homeNoteBtn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:paddingVertical="10dp"
                android:text="@string/addNote"
                android:textSize="20sp"
                android:textColor="@color/txtColorIn"
                android:backgroundTint="@color/btnColor" />
        </LinearLayout>
    </LinearLayout>
</RelativeLayout>